# DeepSEA-SHARCQ

./: .gitignore  cicd.gitlab-ci.yml  poetry.config
cicd/: README.md  cdk.json  deploy.sh  pyproject.toml
cicd/cicd/: app.py  pipeline.py  terraform_backend.py
docs/: development.md
infrastructure/: eks-cluster.tf  publish_docker_image.sh  pyproject.toml  vpc.tf
infrastructure/cicd/: buildspec.yml  codebuild.tf  iam_roles.tf  main.tf  pipeline.tf  variables.tf
infrastructure/ecr/: ecr.tf  outputs.tf  terraform.tf
infrastructure/eks/: main.tf  terraform.tf
infrastructure/eks_cluster/: eks-cluster.tf  terraform.tf  vpc.tf
infrastructure/kubernetes_packing/: .terraform.lock.hcl  kubernetes.tf  main.tf  terraform.tf  terraform.tfstate  variables.tf
src/ai/: Dockerfile  pyproject.toml
src/ai/deepseasharcq/: api.py  cli.py  main.py
src/ai/deepseasharcq/adapters/: NBB_adapter.py
src/ai/deepseasharcq/imageRegestration/mappings/: NBB.py  mappingAbstract.py
src/ai/deepseasharcq/imageRegestration/transforms/: nonLinearTriangle.py  transformAbstract.py
src/ai/deepseasharcq/models/: Image.py  points.py
src/ai/tests/: main_api_test.py  test_main.py
src/api/: Dockerfile  pyproject.toml
src/api/api/: main.py
src/api/deepseasharcqapi/: aws_util.py  main.py  main_api.py
src/api/tests/: main_api_test.py
src/aws_util/: pyproject.toml
src/aws_util/wildroot_aws_util/: aws_util.py
src/frontend/: pyproject.toml
src/frontend/frontend/: app.py
src/infrastructure/: README.md  pyproject.toml
src/infrastructure/infrastructure/: ai_stack.py  bootstrap_iam_role.json  cdk.py  fastapi_stack.py  unzip_app_stack.py
src/infrastructure/infrastructure/cdk.out/: AIStack.assets.json  AIStack.template.json  FastAPIStack.assets.json  FastAPIStack.template.json  UnzipAppStack.assets.json  UnzipAppStack.template.json  manifest.json  tree.json
src/infrastructure/tests/: test_cdk.py
src/unzip_app/: pyproject.toml
src/unzip_app/tests/: main_test.py
src/unzip_app/unzip_app/: main.py
src/zip_app/: pyproject.toml
src/zip_app/tests/: main_test.py
src/zip_app/zip_app/: zip.py
src/zip_unzip_app/zip_unzip_app/: main.py  unzip.py  zip.py
