[tool.poetry]
name = "deepseasharcq"
version = "0.1.0"
description = ""
authors = ["Gunnar <TODO@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.0"
torchvision = "^0.12.0"
scikit-learn = "^1.1.1"
matplotlib = "^3.5.2"
opencv-python = "^4.6.0"
neural-best-buddies = "^1.0.0"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
pydantic = "^1.10.2"
typer = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
