[tool.poetry]
name = "infrastructure"
version = "0.1.0"
description = "aws cdk code for deploying infrastructure in completely automated and determinate way"
authors = ["Duncan Haywood"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aws-cdk-lib = "^2.31.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
