[tool.poetry]
name = "zip_app"
version = "0.1.0"
description = "zips files from s3 when matching other bucket ie. complete in this case"
authors = ["Duncan Haywood"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
psutil = "^5.9.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
